Comunicacion entre server y clients

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,13 @@
 			<span id="lbOnline" class="text-success">Online</span>
 			<span id="lbOffline" class="text-danger">Offline</span>
 		</p>
+
+		<div class="row">
+			<div class="col">
+				<input type="text" id="txtMensaje" class="form-control" />
+			</div>
+			<div class="col"><button id="btnEnviar" class="btn btn-primary">Enviar</button></div>
+		</div>
 		<script src="./socket.io/socket.io.js"></script>
 		<script src="./js/socket-client.js"></script>
 	</body>
